--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <br><br>
         <h1> Object Name :</h1>
         <br>
-        <input type="text"> 
+        <input id="object_name" type="text"> 
         <br><br>
         <span id="status">
           <h3 class = "btn btn-danger" id="Modal_Status"></h3>
