--- a/index.html
+++ b/index.html
@@ -21,12 +21,15 @@
         <br><br>
         <h1> Object Name :</h1>
         <br>
-        <input id="object_name" type="text"> 
-        <br><br>
+        <input id="object_name" type="text"> <br> 
+        <button onclick="Start();" class = "btn btn-success" id="start_button">Start</button>
+        <br>
         <span id="status">
           <h3 class = "btn btn-danger" id="Modal_Status"></h3>
           <h3 class="btn btn-warning" id="status_found"></h3>
         </span>   
     </center>
+
+    <script src="main.js"></script>
 </body>
 </html>
